revert libelf-dev workaround
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@7788 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -88,8 +88,9 @@ nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
     and newer.
   * Add timer.patch to fix kernel module build on Linux 4.15 and newer.
   * nvidia-kernel-dkms: add dependency to libelf-dev [amd64] to fix kernel
-    modules builds failures due to new config used by the kernel.
+    modules builds failures due to new config used by the kernel (384.111-1).
     Workaround for #886474.
+  * Remove libelf-dev workaround.
 
   [ Russ Allbery ]
   * Remove myself from Uploaders.
