--- a/debian/changelog
+++ b/debian/changelog
@@ -28,7 +28,12 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
   * Stop shipping the classic libnvidia-tls.so.* and ship the modern one (for
     Linux 2.6 onwards) in the regular libdir instead of the tls/ subdir
     (384.111-1).
-  * nvidia-alternative: Trigger register-glx-alternative-nvidia upon removal.
+  * nvidia-alternative.prerm: Trigger register-glx-alternative-nvidia upon
+    removal.
+  * libgl1-nvidia-glx.prerm: Do not forcibly remove the nvidia alternative,
+    this would reset it from manual mode to auto mode while it could still
+    be needed by other packages, e.g. libcuda1. Let the nvidia-alternative
+    triggers handle it instead.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
 
