Drop patches fixed upstream in 340.106
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/340@7812 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ nvidia-graphics-drivers (340.106-1~svn4deb8jessie) UNRELEASED; urgency=medium
        https://nvidia.custhelp.com/app/answers/detail/a_id/4611
        (Closes: #886852)
 
+  [ Luca Boccassi ]
+  * Drop nvidia-drm-pci-init.patch and timer.patch, fixed upstream.
+
  -- Luca Boccassi <bluca@debian.org>  Tue, 16 Jan 2018 21:08:01 +0000
 
 nvidia-graphics-drivers (340.104-1~svn4deb8jessie) UNRELEASED; urgency=medium
