--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (387.34-4) UNRELEASED; urgency=medium
+
+  * libcuda1: Add Provides: libcuda-9.1-1{,-i386}.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 20 Jan 2018 04:38:03 +0100
+
 nvidia-graphics-drivers (387.34-3) experimental; urgency=medium
 
   [ Luca Boccassi ]
