--- a/debian/changelog
+++ b/debian/changelog
@@ -1308,8 +1308,8 @@ nvidia-graphics-drivers (355.11-1) experimental; urgency=medium
   * Restrict watch file to releases from the 355.xx short lived branch.
 
   [ Andreas Beckmann ]
-  * libglvnd-nvidia: New package package for the vendor-neutral GL libraries
-    (GLVND): libOpenGL.so.0, libGLdispatch.so.0
+  * libglvnd-nvidia: New package for the vendor-neutral GL libraries (GLVND):
+    libOpenGL.so.0, libGLdispatch.so.0
   * libegl-nvidia0: New package for the vendor-specific EGL implementation
     from NVIDIA (libEGL_nvidia.so.0), accessible via GLVND.
   * libegl1-nvidia: The libEGL.so.1 library is now just a (vendor-neutral)
