--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+nvidia-graphics-drivers (390.25-1~svn1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 390.25 (2018-01-29).
+    - Fixed a regression introduced in 390.12 that prevented displays from
+      working normally when running multiple X screens with emulated overlays.
+    - Added support for the following GPUs: GeForce GTX 1060 5GB, Quadro P620
+    - Fixed a regression introduced in 390.12 that caused occasional hangs and
+      hard lockup messages in the system log when screen transformations are in
+      use.
+
+ -- Luca Boccassi <bluca@debian.org>  Mon, 29 Jan 2018 22:16:40 +0000
+
 nvidia-graphics-drivers (390.12-1) experimental; urgency=medium
 
   * New upstream beta 390.12 (2018-01-04).
