--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (390.25-1~svn1) UNRELEASED; urgency=medium
     - Fixed a regression introduced in 390.12 that caused occasional hangs and
       hard lockup messages in the system log when screen transformations are in
       use.
+  * Update nv-readme.ids.
 
  -- Luca Boccassi <bluca@debian.org>  Mon, 29 Jan 2018 22:16:40 +0000
 
