Update symbols file for 390.25
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/390@7835 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (390.25-1~svn1) UNRELEASED; urgency=medium
       hard lockup messages in the system log when screen transformations are in
       use.
   * Update nv-readme.ids.
+  * Update symbols files.
 
  -- Luca Boccassi <bluca@debian.org>  Mon, 29 Jan 2018 22:16:40 +0000
 
