--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (390.25-1~svn1) UNRELEASED; urgency=medium
       use.
   * Update nv-readme.ids.
   * Update symbols files.
+  * Refresh nvidia-use-ARCH.o_binary.patch to remove fuzz.
 
  -- Luca Boccassi <bluca@debian.org>  Mon, 29 Jan 2018 22:16:40 +0000
 
