--- a/debian/changelog
+++ b/debian/changelog
@@ -97,6 +97,11 @@ nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
 
 nvidia-graphics-drivers (304.137-1) UNRELEASED; urgency=medium
 
+  * The 304.xx legacy driver series has been declared as End-of-Life by
+    NVIDIA. No further updates fixing security issues, critical bugs, or
+    adding support for new Xorg or Linux releases will be issued.
+    https://nvidia.custhelp.com/app/answers/detail/a_id/3142
+
   * New upstream legacy 304xx branch release 304.137 (2017-09-19).
     - Improved compatibility with recent Linux kernels.
 
