--- a/debian/changelog
+++ b/debian/changelog
@@ -3,10 +3,14 @@ nvidia-graphics-drivers (390.25-1~svn1) UNRELEASED; urgency=medium
   * New upstream long lived branch release 390.25 (2018-01-29).
     - Fixed a regression introduced in 390.12 that prevented displays from
       working normally when running multiple X screens with emulated overlays.
-    - Added support for the following GPUs: GeForce GTX 1060 5GB, Quadro P620
+    - Added support for the following GPUs: GeForce GTX 1060 5GB, Quadro P620.
     - Fixed a regression introduced in 390.12 that caused occasional hangs and
       hard lockup messages in the system log when screen transformations are in
       use.
+  * New upstream release 340 series.
+    - Fixed a bug which could cause X servers that export a Video Driver
+      ABI earlier than 0.8 to crash when running X11 applications which
+      call XRenderAddTraps().
   * Update nv-readme.ids.
   * Update symbols files.
   * Refresh nvidia-use-ARCH.o_binary.patch to remove fuzz.
