--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ nvidia-graphics-drivers (304.137-1~svn4deb9stretch) UNRELEASED; urgency=medium
     this would reset it from manual mode to auto mode while it could still
     be needed by other packages, e.g. libcuda1. Let the nvidia-alternative
     triggers handle it instead (384.111-3).
+  * Use dh_missing --fail-missing.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 11 Oct 2017 02:02:40 +0200
 
