--- a/debian/changelog
+++ b/debian/changelog
@@ -65,7 +65,7 @@ nvidia-graphics-drivers (304.137-1~svn4deb7wheezy) UNRELEASED; urgency=medium
     (375.82-5).
   * Use https:// URLs where possible (375.82-8).
   * nvidia-kernel-{dkms,source}: Mention the supported architecture(s) in the
-    long Description.
+    long Description (384.111-4).
 
   [ Luca Boccassi ]
   * Switch to my debian.org email address in Uploaders.
