--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (384.111-5) UNRELEASED; urgency=medium
+
+  * nvidia-modprobe.conf: Consistently handle nvidia-modeset.
+
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 26 Feb 2018 02:11:43 +0100
+
 nvidia-graphics-drivers (384.111-4) unstable; urgency=medium
 
   * nvidia-kernel-{dkms,source}: Mention the supported architecture(s) in the
