--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-nvidia-graphics-drivers (387.34-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (387.34-4) unstable; urgency=medium
 
   * libcuda1: Add Provides: libcuda-9.1-1{,-i386}.
   * nvidia-modprobe.conf: Consistently handle nvidia-modeset.
   * Merge changes from 384.111-4.
   * Merge changes from 384.111-4~deb9u1 (stretch).
   * Update lintian overrides.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 20 Jan 2018 04:38:03 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 05 Mar 2018 05:12:11 +0100
 
 nvidia-graphics-drivers (387.34-3) experimental; urgency=medium
 
